# NNSpire

./: .gitattributes  .gitignore  LICENSING.md  README.md  TODO.md  ai.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  Doxyfile  HISTORY.md  NN_bricks_overview.md  NN_internal_layer_architecure_types.docx  PIPELINE.md  PLUGIN-SDK.md  TRUST-ARCHITECTURE.md  VSCODE-DEV-SETUP.md  blueprints.md  modern_ai_systems_ontology.md
docs/adr/: ADR-001-qt6-ui-framework.md  ADR-002-cpp17-engine-language.md  ADR-003-c-abi-plugin-boundary.md  ADR-004-dual-language-everywhere.md  ADR-005-pybind11-python-bridge.md  ADR-006-license-split.md  ADR-007-pki-trust-chain.md  ADR-008-onnx-primary-export.md  ADR-009-nns-nnsr-custom-formats.md  ADR-010-cmake-build-system.md  ADR-011-no-exceptions-in-engine.md  ADR-012-ibackend-dynamic-dispatch.md  ADR-013-compute-graph-autograd.md  ADR-014-studio-is-server-client.md  ADR-015-quantum-qiskit-bridge.md  ADR-016-free-forever-feature-tier.md  ADR-017-trust-store-in-app-data.md  ADR-018-qml-not-qt-widgets.md  ADR-019-inside-out-phase-order.md  ADR-020-iactivation-functional-contract.md  ADR-021-path-equals-namespace-layout.md  ADR-022-libtorch-backend-vs-scratch-cuda.md  README.md
docs/ai-standards-kb/: CODE-ONBOARDING-ESSAY.md  COMPLETION-SUMMARY.md  INDEX.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  export-final.ps1  test-margin.html  test-pandoc.html
nnspire/: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md
nnspire/app/: CMakeLists.txt
nnspire/deployment/: CMakeLists.txt
nnspire/pipeline/: CMakeLists.txt
nnspire/plugin-api/templates/cpp/layer/: CMakeLists.txt  README.md
nnspire/plugin-api/templates/cpp/layer/include/: my_layer.h
nnspire/plugin-api/templates/cpp/layer/src/: my_layer.cpp
nnspire/plugins/: CMakeLists.txt  CONTRIBUTING.md
nnspire/plugins/bpe_tokenizer/: BpeTokenizerPlugin.cpp  plugin.manifest.json
nnspire/plugins/example_activation/: ExampleActivationPlugin.cpp  plugin.manifest.json
nnspire/python-bridge/: CMakeLists.txt  pyproject.toml
nnspire/python-bridge/bindings/: module.cpp
nnspire/python-bridge/nnspire/: __init__.py  plugin_manifest.py  torch_compat.py
nnspire/python-bridge/nnspire/keras/: __init__.py  _model.py  callbacks.py  layers.py  losses.py  optimizers.py
nnspire/python-bridge/nnspire/runners/: __init__.py  base.py  kserve.py  onnx_runtime.py  openai.py  tf_serving.py  triton.py
nnstudio/: CMakeLists.txt  CONTRIBUTING.md
nnstudio/app/: CMakeLists.txt
nnstudio/deployment/: CMakeLists.txt
nnstudio/include/: torch_compat.h
nnstudio/include/builtin/activations/: Activations.h  FnLayer.h  Functors.h
nnstudio/include/builtin/backends/: CpuBackend.h  CudaBackend.h  QuantumBackend.h
nnstudio/include/builtin/layers/: ActivationFunctors.h  Activations.h  ActivationsFnLayer.h  Conv2D.h  Dense.h  Embedding.h  MultiHeadAttention.h  NormLayers.h
nnstudio/include/builtin/losses/: Losses.h
nnstudio/include/builtin/optimizers/: Optimizers.h
nnstudio/include/core/: BackendRegistry.h  Checkpoint.h  CompatibilityChecker.h  ComputeGraph.h  DType.h  Device.h  EarlyStopping.h  FeatureFlags.h  IActivation.h  IBackend.h  ILoss.h  IOptimizer.h  Layer.h  Result.h  Tensor.h  Trainer.h
nnstudio/include/plugin-api/: PluginLoader.h
nnstudio/include/plugin-api/trust/: TrustStore.h  TrustUpdateHandler.h  TrustVerifier.h
nnstudio/pipeline/: CMakeLists.txt
nnstudio/plugin-api/: CMakeLists.txt  nnstudio_plugin.h
nnstudio/plugin-api/include/: PluginManifest.h
nnstudio/plugin-api/include/nnstudio/: nnstudio_plugin.h
nnstudio/plugin-api/schemas/: plugin.manifest.schema.json  tup.manifest.schema.json
nnstudio/plugin-api/src/: PluginManifest.cpp
nnstudio/plugin-api/templates/: generate_manifest.py
nnstudio/plugin-api/templates/cpp/layer/: CMakeLists.txt  README.md  plugin.manifest.json.template
nnstudio/plugin-api/templates/cpp/layer/include/: my_layer.h
nnstudio/plugin-api/templates/cpp/layer/src/: my_layer.cpp
nnstudio/plugin-api/templates/python/layer/: README.md  pyproject.toml.template
nnstudio/plugin-api/templates/python/layer/{{PLUGIN_ID_SNAKE}}/: __init__.py  layer.py
nnstudio/plugins/: CMakeLists.txt  CONTRIBUTING.md
nnstudio/plugins/bpe_tokenizer/: BpeTokenizerPlugin.cpp  plugin.manifest.json
nnstudio/plugins/example_activation/: ExampleActivationPlugin.cpp  plugin.manifest.json
nnstudio/python-bridge/: CMakeLists.txt  pyproject.toml
nnstudio/python-bridge/bindings/: module.cpp
nnstudio/python-bridge/nnstudio/: __init__.py  plugin_manifest.py  torch_compat.py
nnstudio/python-bridge/nnstudio/keras/: __init__.py  _model.py  callbacks.py  layers.py  losses.py  optimizers.py
nnstudio/python-bridge/nnstudio/runners/: __init__.py  base.py  kserve.py  onnx_runtime.py  openai.py  tf_serving.py  triton.py
nnstudio/src/builtin/activations/: Activations.cpp  Functors.cpp
nnstudio/src/builtin/backends/: CpuBackend.cpp  CudaBackend.cpp  QuantumBackend.cpp
nnstudio/src/builtin/layers/: ActivationFunctors.cpp  Activations.cpp  Conv2D.cpp  Dense.cpp  Embedding.cpp  MultiHeadAttention.cpp  NormLayers.cpp
nnstudio/src/builtin/losses/: Losses.cpp
nnstudio/src/builtin/optimizers/: Optimizers.cpp
nnstudio/src/core/: BackendRegistry.cpp  Checkpoint.cpp  CompatibilityChecker.cpp  ComputeGraph.cpp  Layer.cpp  Tensor.cpp  Trainer.cpp
nnstudio/src/plugin-api/: PluginLoader.cpp
nnstudio/src/plugin-api/tools/sign/: main.cpp
nnstudio/src/plugin-api/trust/: TrustStore.cpp  TrustUpdateHandler.cpp  TrustVerifier.cpp
nnstudio/tests/: CMakeLists.txt
nnstudio/tests/builtin/: test_activations.cpp  test_embedding.cpp  test_layers.cpp
nnstudio/tests/compat/: test_torch_compat.cpp
nnstudio/tests/core/: test_activations.cpp  test_checkpoint.cpp  test_compat.cpp  test_compute_graph.cpp  test_conv2d.cpp  test_early_stopping.cpp  test_losses.cpp  test_optimizers.cpp  test_tensor.cpp  test_trainer_xor.cpp
nnstudio/tests/plugin-api/: test_bpe_tokenizer.cpp  test_plugin_loader.cpp  test_trust_store.cpp  test_trust_verifier.cpp
nnstudio/third-party-deps/: README.md
(+132 files in other folders)
