[build-system]
# scikit-build-core: the modern, PEP 517-compliant CMake build backend for
# Python extensions.  Handles the pybind11 compilation transparently via
# the existing CMakePresets.json in NNSpire/.
# Install: pip install scikit-build-core
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

# ─── Project metadata ─────────────────────────────────────────────────────────
[project]
name = "NNSpire"
version = "0.1.0"
description = "NNSpire Python bridge — neural-network design and training toolkit"
readme = "README.md"
license = { file = "../../LICENSING.md" }
authors = [
    { name = "NNSpire Project" }
]
keywords = ["neural-network", "machine-learning", "deep-learning", "training"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []   # The C extension carries all runtime logic; no extra deps

[project.optional-dependencies]
# Full JSON Schema validation for plugin manifests
plugin-validation = ["jsonschema>=4.0"]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "jsonschema>=4.0",
]

[project.urls]
"Homepage"    = "https://github.com/rheingold/NNSpire"
"Source"      = "https://github.com/rheingold/NNSpire"
"Bug Tracker" = "https://github.com/rheingold/NNSpire/issues"

# ─── scikit-build-core → CMake wiring ─────────────────────────────────────────
[tool.scikit-build]
# Point scikit-build at the NNSpire root CMakeLists.txt (two levels up from here)
cmake.source-dir = "../.."
# CMake preset to use (matches NNSpire/CMakePresets.json)
# Override at build time: pip install . --config-settings="cmake.args=-DOTHER=FLAG"
cmake.args = ["-DNN_ENABLE_PYTHON=ON", "-DNN_ENABLE_TESTS=OFF"]

# The .pyd/.so will be placed inside the NNSpire package directory
wheel.packages = ["NNSpire"]

# Minimum scikit-build-core version
minimum-version = "0.9"

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
